test/custom_configs/bad/008-MissedMode.h
// clang-format off
#define TIMER_MODES       \
    fStopTest,            \
    linearTest,           \
    print,                \
    mask,                 \
    splitGradeMask,       \
    expertFStopTest,      \
    expertLinearTest,     \
    last_,                \
    localizedFStopTest,   \
    localizedLinearTest,  \
    splitGradeFStopTest,  \
    splitGradeLinearTest, \
    relMask,
// clang-format on
